--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">ToDoApp</string>
+    <string name="completed">Completed</string>
+    <string name="all_active">All Active</string>
+    <string name="clear_completed">Clear Completed</string>
 </resources>
